--- a/protfolio.html
+++ b/protfolio.html
@@ -59,7 +59,7 @@
 				<li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
 				<li><a href="#about"><i class="fa fa-user"></i>About</a></li>
 				<li><a href="#service"><i class="fa fa-list"></i>Skills</a></li>
-				<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+				<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Last Projects</a></li>
 				<li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
 				<li><a href="#mailme"><i class="fa fa-comments"></i>Mail-Me</a></li>
 			</ul>
@@ -103,7 +103,8 @@
 							<div class="row padd-15">
 								<div class="about-text padd-15">
 									<h3>I'm Himanshu Udapure <span></span></h3>
-									<p>Hi and welcome  </p>
+									<p>An enthusiastic computer science engineer who is eager to leverage academic knowledge to contribute to a
+										dynamic team with an optimistic and growth mindset for personal and professional development.</p>
 								</div>
 							</div>
 							<div class="row padd-15">
@@ -116,7 +117,7 @@
 											<p>Age : <span>23</span> </p>
 										</div>
 										<div class="info-item padd-15">
-											<p>Website : <span>linkdin</span> </p>
+											<p>Website :<a href="https://www.linkedin.com/in/himanshu-udapure-731076215/" class="link"> linkdin</a>
 										</div>
 										<div class="info-item padd-15">
 											<p>Email : <span>udapurehimanshu@gmail.com</span> </p>
@@ -320,10 +321,13 @@
 									<i class="fa fa-mobile-alt"></i>
 								</div>
 								<h4>Web Designing</h4>
-								<p>  I have been working as a web developer
-									 for quite some time now. I believe I am a very ambitious person who loves to work 
-									 on making the website work well. Working on the web is my passion as I love to work
-									  on exciting projects</p>
+								<p>  Mastering advanced HTML and CSS skills, 
+									such as responsive design, CSS Grid, and Flexbox, 
+									is essential for creating dynamic and visually
+									 appealing websites. These skills enable building 
+									 user-friendly interfaces, optimizing performance, and
+									  ensuring cross-browser compatibility, significantly 
+									  enhancing web development capabilities</p>
 							</div>
 						</div>
 						<!-- Service Item End -->
@@ -334,21 +338,18 @@
 									<i class="fa fa-laptop-code"></i>
 								</div>
 								<h4>Project Planning & Management</h4>
-								<p>I have a proven track record of successfully managing projects 
-									from start to finish, and I am confident that I can bring the same 
-									level of success to your organization.</p>
+								<p>Mastering advanced project planning and management skills, 
+									such as Gantt charts, critical path analysis, and risk management, 
+									is essential for successful project execution. These skills enable 
+									efficient resource allocation, timeline optimization, and risk mitigation, 
+									significantly enhancing project outcomes and team coordination.
+
+								</p>
 							</div>
 						</div>
 						<!-- Service Item End -->
 						<!-- Service Item Start -->
-						<!--div class="service-item padd-15">
-							<div class="service-item-inner">
-								<div class="icon">
-									<i class="fa fa-palette"></i>
-								</div>
-								<h4>Cloud Computing</h4>
-								<p>Lorem you have to put the data on the table</p>
-							</div>
+						
 						</div-->
 						<!-- Service Item End -->
 						<!-- Service Item Start -->
@@ -357,10 +358,12 @@
 								<div class="icon">
 									<i class="fa fa-code"></i>
 								</div>
-								<h4>Cyber-Security engineer</h4>
-								<p> fast-working and attentive team worker who has the necessary skills 
-									to not only keep your organization safe from cyber-attacks but to also
-									 put systems in place that minimize risk whilst protecting your assets.</p>
+								<h4>SQL</h4>
+								<p> Mastering advanced SQL skills, such as complex joins, subqueries,
+									 and window functions, is essential for efficient database management 
+									 and analysis. These skills enable handling large datasets, performing
+									  sophisticated queries, and optimizing performance, significantly enhancing data
+									   retrieval and manipulation capabilities.</p>
 							</div>
 						</div>
 						<!-- Service Item End -->
@@ -370,10 +373,14 @@
 								<div class="icon">
 									<i class="fa fa-search"></i>
 								</div>
-								<h4>Planning & Strategy Management </h4>
-								<p> a strategic thinker with a proven ability to develop and implement successful plans.
-									 I have a strong track record of success in a variety of industries, including tech,
-									  healthcare, and finance. I am also an expert in project management and risk assessment."</p>
+								<h4>Strategy Planning </h4>
+								<p> Mastering advanced strategic planning skills, such as SWOT analysis, 
+									scenario planning, and KPI development, is essential for long-term 
+									success. These skills enable setting clear objectives, identifying
+									 growth opportunities, and monitoring performance, significantly 
+									 enhancing decision-making and organizational effectiveness.
+
+								</p>
 							</div>
 						</div>
 						<!-- Service Item End -->
@@ -383,12 +390,28 @@
 								<div class="icon">
 									<i class="fa fa-bullhorn"></i>
 								</div>
-								<h4>Data Management Engineer </h4>
-								<p>skilled in all aspects of data management, from data acquisition to data analysis. 
-									I am also an expert in data security and compliance.I am confident that I have the 
-									skills and experience necessary to help your company achieve its data management goals.</p>
+								<h4>Data Management</h4>
+								<p>Mastering advanced data management skills, 
+									such as data normalization, ETL processes, and 
+									database optimization, is essential for effective
+									 data handling. These skills enable maintaining data 
+									 integrity, efficient data processing, and improved performance,
+									  significantly enhancing data accuracy and accessibility.</p>
 							</div>
 						</div>
+						<div class="service-item padd-15">
+							<div class="service-item-inner">
+								<div class="icon">
+									<i class="fa fa-palette"></i>
+								</div>
+								<h4>Advanced Excel</h4>
+								<p>Mastering advanced Excel skills, such as Pivot Tables, 
+									VLOOKUP, and XLOOKUP functions, is crucial for efficient
+									 data analysis and reporting. These skills enable handling
+									  complex data sets, performing sophisticated calculations, and 
+									  automating tasks with Macros and VBA, significantly enhancing 
+									  productivity and decision-making capabilities.</p>
+							</div>
 						<!-- Service Item End -->
 					</div>
 				</div>
@@ -400,12 +423,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="section-title padd-15">
-							<h2>Portfolio</h2>
+							<h2>Last Project</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="portfolio-heading padd-15">
-							<h2>My Last Project</h2>
 							<section class="service section" id="service">
 								<div class="container">
 									<div class="row">
@@ -458,7 +480,12 @@
 														<h4> Stock Market Prediction</h4>
 														<p bold>Mentor :- Dr.G.J.Sawale</p>
 															<p bold>Key Skills -  Machine Learning |  Python |  Analytics |  Ms-Office  | Paperwork</p>
-														<p> The project is not ready our team is working on it so simply we give you a prediction for stock market according to historical data</p>
+														<p> Forecasting accurate stock prices in every region of financial markets 
+															is an ongoing challenge with a huge significance. With the help of 
+															machine learning algorithms, this project seeks to predict future 
+															stock prices in the Indian stock market. In particular, we concentrate 
+															on using three different algorithms: LSTM (long short-term memory), LR,
+															 and a hybrid model that combines the two</p>
 													</div>
 													
 										</div>
